--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,34 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+@import 'variables';
+
+@import "~uikit/src/scss/variables-theme.scss";
+@import "~uikit/src/scss/mixins-theme.scss";
+@import "~uikit/src/scss/uikit-theme.scss";
+
+html {
+    background-color: #f8f8f8;
+}
+.uk-nav > li.uk-active > a {
+    color: #329043;
+    border-right: 3px solid;
+}
+.df-sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    box-sizing: border-box;
+    width: 90px !important;
+    padding: 0;
+    border-right: 1px #e5e5e5 solid;
+    overflow: auto;
+}
+
+.df-sidebar+.df-main {
+    padding-left: 90px;
+}
+.df-card-actions {
+    right: 10px;
+    top: 10px;
+}
